# CPP-Python-Integration

./: .gitignore  README.md  conftest.py  main.py
boost/: CMakeLists.txt  bindings.cpp
cppyy/: CMakeLists.txt
cppyy/cpp_wrapper/: __init__.py  cpp_wrapper.map
include/: Circle.h  DataStreamExample.h
libs/: swig_integration.py  swig_integrationPYTHON_wrap.cxx
libs/cppyy_integration/: __init__.py  cppyy_integration.map  cppyy_integration.rootmap  cppyy_integration_rdict.pcm  libcppyy_integrationCppyy.so.0.0.1
libs/cppyy_integration/tests/: test_bindings.py
pybind11/: CMakeLists.txt  bindings.cpp  main.py
shared/include/: DataStreamExample.h  Rectangle.h  ShapeManager.h
shared/src/: Circle.cpp
src/: Circle.cpp  DataStreamExample.cpp  ShapeManager.cpp
swig/: CMakeLists.txt  cpp_wrapper.i  cpp_wrapper.py  cpp_wrapperPYTHON_wrap.cxx
tests/: conftest.py  main.py
tools/boost/: CMakeLists.txt  bindings.cpp
tools/cppyy/: CMakeLists.txt
tools/cppyy/cpp_wrapper/: cpp_wrapper.rootmap  cpp_wrapper_rdict.pcm  libcpp_wrapperCppyy.so.0.0.1
tools/cppyy/cpp_wrapper/tests/: test_bindings.py
tools/pybind11/: CMakeLists.txt  bindings.cpp
tools/swig/: CMakeLists.txt  cpp_wrapper.i  cpp_wrapper.py  cpp_wrapperPYTHON_wrap.cxx  cpp_wrapper_wrap.cxx  swig_integration.i
